recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:3: error: not found: value rep
return rep = l(0)::l(l.length-2)
       ^